--- a/misc/SINoALICE.cfg
+++ b/misc/SINoALICE.cfg
@@ -278,30 +278,54 @@
           "ShowOnOverlay": true,
           "Commands": [
             "loop",
+            "mouseDown  50 50",
+            "mouseUp",
+            "wait 35",
             "mouseDown  33.33 41.83",
             "mouseUp",
-            "wait 50",
+            "wait 35",
+            "mouseDown  50 50",
+            "mouseUp",
+            "wait 35",
             "mouseDown   58.35 39.47",
             "mouseUP",
-            "wait 50",
+            "wait 35",
+            "mouseDown  50 50",
+            "mouseUp",
+            "wait 35",
             "mouseDown   76.99 50.39",
             "mouseUp",
-            "wait 50",
+            "wait 35",
+            "mouseDown  50 50",
+            "mouseUp",
+            "wait 35",
             "mouseDown   78.48 64.61",
             "mouseUP",
-            "wait 50",
+            "wait 35",
+            "mouseDown  50 50",
+            "mouseUp",
+            "wait 35",
             "mouseDown    72.88 80.80",
             "mouseUP",
-            "wait 50",
+            "wait 35",
+            "mouseDown  50 50",
+            "mouseUp",
+            "wait 35",
             "mouseDown  47.94 78.54",
             "mouseUP",
-            "wait 50",
+            "wait 35",
+            "mouseDown  50 50",
+            "mouseUp",
+            "wait 35",
             "mouseDown  23.36 71.01",
             "mouseUP",
-            "wait 50",
+            "wait 35",
+            "mouseDown  50 50",
+            "mouseUp",
+            "wait 35",
             "mouseDown  18.20 54.87",
             "mouseUP",
-            "wait 50",
+            "wait 35",
             "loopEnd",
             "onRelease",
             "abort"
